# language-guided-manipulation-mujoco

./: .gitignore  README.md  controller.py  env.py  main.py  model.xml  pyproject.toml
demos/: __init__.py  collect_demos.py  dataset.pkl
evaluation/: __init__.py  evaluate.py
execution/: execute_from_graph.py
llm_abstraction/: __init__.py  generate_task_graph.py  prompt.py
mujoco_env/: __init__.py  controller.py  env.py  model.xml
mujoco_env/assets/franka_emika_panda/: mjx_panda.xml
segmentation/: __init__.py  segment.py
tests/: debug_lift.py  debug_lift_output.txt  diag_output.txt  diag_output_after.txt  diag_output_v2.txt  diag_output_v3.txt  diagnose_controller.py  pytest_out2.txt  pytest_out3.txt  pytest_output.txt  test_collect_demos_smoke.py  test_env_smoke.py  test_execution_smoke.py  test_segmentation_rules.py  test_task_graph_json.py
utils/: __init__.py  logging.py
